deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: devops-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: 493223220386.dkr.ecr.ap-south-1.amazonaws.com/python-app:1
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests: {cpu: 100m, memory: 128Mi}
          limits: {cpu: 500m, memory: 512Mi}
