service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: devops-app
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
  - port: 80
    targetPort: 5000
